# obstacle_avoidance_simulation

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
include/: obstacle_avoidance.h
include/obstacle_avoidance/: obstacle_avoidance.h
launch/: obstacle_avoidance.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: main.cpp  obstacle_avoidance.cpp
worlds/: turtlebot_enclosed_world.world
